<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        tools:context=".SurveyActivity"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout android:id="@+id/llFoodPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/food_preferences"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCuisine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_your_favourite_cuisine"/>

                <RadioGroup
                    android:id="@+id/rgCuisine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbChinese"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/chinese" />

                    <RadioButton
                        android:id="@+id/rbFrench"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/french" />

                    <RadioButton
                        android:id="@+id/rbItalian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/italian" />

                    <RadioButton
                        android:id="@+id/rbIndian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/indian" />

                    <RadioButton
                        android:id="@+id/rbJapanese"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/japanese" />

                    <RadioButton
                        android:id="@+id/rbThai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thai" />

                    <RadioButton
                        android:id="@+id/rbTurkish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/turkish" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tvOftenEat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_often_do_you_eat_out" />

                <RadioGroup
                    android:id="@+id/rgOftenEat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbNever"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/never" />

                    <RadioButton
                        android:id="@+id/rbRarely"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rarely" />

                    <RadioButton
                        android:id="@+id/rbSometimes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sometimes" />

                    <RadioButton
                        android:id="@+id/rbFrequently"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frequently" />

                </RadioGroup>

                <TextView
                    android:id="@+id/tvSpicyFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_prefer_spicy_food" />

                <RadioGroup
                    android:id="@+id/rgSpicyFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbSpicyYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/rbSpicyNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>


                <TextView
                    android:id="@+id/tvVegetarian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_prefer_vegetarian_food" />

                <RadioGroup
                    android:id="@+id/rgVegetarian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbVegetarianYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/rbVegetarianNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>

                <TextView
                    android:id="@+id/tvSeafood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_like_seafood" />

                <RadioGroup
                    android:id="@+id/rgSeafood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbSeafoodYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/rbSeafoodNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout android:id="@+id/llDietPreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/dietary_habits"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvIsVegetarian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_vetetarian" />

                <RadioGroup
                    android:id="@+id/rgIsVegetarian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbIsVegetarianYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/rbIsVegetarianNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tvIsOrganicFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_prefer_organic_food" />

                <RadioGroup
                    android:id="@+id/rgIsOrganicFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbIsOrganicYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/rbIsOrganicNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>

                <TextView
                    android:id="@+id/tvIsDiaryProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_consume_dairy_products" />

                <RadioGroup
                    android:id="@+id/rgIsDairyProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbIsDairyProductYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/rbIsDairyProductNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>


                <TextView
                    android:id="@+id/tvIsFastFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_eat_fast_food" />

                <RadioGroup
                    android:id="@+id/rgIsFastFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbIsFastFoodYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/rbIsFastFoodNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>

                <TextView
                    android:id="@+id/tvIsFoodAllergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_have_any_food_allergies" />

                <RadioGroup
                    android:id="@+id/rgIsFoodAllergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbIsFoodAllergyYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/rbIsFoodAllergyNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>

            </LinearLayout>
        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/scroll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
